--- a/app/blog.html
+++ b/app/blog.html
@@ -2,7 +2,7 @@
 layout: default
 title: titles.blog
 permalink: /blog/
-image: blog.jpg
+image: gdgsuncoast-blog.png
 ---
 
  {% include general/top-section.html %}
