--- a/app/speakers.html
+++ b/app/speakers.html
@@ -2,6 +2,7 @@
 layout: default
 title: titles.speakers
 permalink: /speakers/
+image: gdgsuncoast-speakers.png
 modal: all
 ---
 
@@ -12,4 +13,3 @@ modal: all
 {% else %}
     {% include speakers/speakers-list-2.html %}
 {% endif %}
-
