--- a/app/team.html
+++ b/app/team.html
@@ -4,6 +4,8 @@ title: titles.team
 permalink: /team/
 color: "#00bcd4"
 modal: team
+image: gdgsuncoast-team.png
+
 ---
 
  {% include general/top-section.html %}
