--- a/app/schedule.html
+++ b/app/schedule.html
@@ -2,7 +2,7 @@
 layout: default
 title: titles.schedule
 permalink: /schedule/
-image: schedule.jpg
+image: gdgsuncoast-schedule.png
 ---
 
 {% include general/top-section.html %}
